add 2 enemy, music and hasOwnProperty

--- a/style.css
+++ b/style.css
@@ -138,3 +138,9 @@ h table {
     background: #fff;
     left: 145px;
 }
+
+.music {
+    position: absolute;
+    top: -100px;
+    right: -50px;
+}
